--- a/public/profile.html
+++ b/public/profile.html
@@ -524,8 +524,9 @@
             profilePic.src = profileData.data.picture || '';
             profilePic.className = "card-img-top"
 
-            profilePic.style = "height:30vh;object-fit: contain;background-image:url('https://mir-s3-cdn-cf.behance.net/project_modules/disp/a5f35a112938979.601ee0c09cecd.gif')"
+            // profilePic.style = "height:30vh;object-fit: contain;background-image:url('https://mir-s3-cdn-cf.behance.net/project_modules/disp/a5f35a112938979.601ee0c09cecd.gif')"
 
+            profilePic.style = "width:30vh; object-fit: contain; border-radius: 50%; border: 1px solid rgba(255,0,0,1.00);"
 
 
 
