--- a/public/gathering.html
+++ b/public/gathering.html
@@ -852,6 +852,8 @@
                 map = new google.maps.Map(document.getElementById("left-map"), {
                     center: initPoint,
                     zoom: 18,
+                    fullscreenControl: false,
+                    mapTypeControl: false,
                     styles: [
                         {
                             "featureType": "landscape.man_made",
@@ -2058,7 +2060,7 @@
 
 
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLNX2P4gamMMFc7dckwq7LRmVYvmWmDI&callback=initMap&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmXJHj0WUd8Zy-neXlew88hmIkB4bnwI&callback=initMap&v=weekly"
         async></script>
 
 
