modified profile.html and gathering.html

--- a/public/index.html
+++ b/public/index.html
@@ -153,12 +153,16 @@
                 <form>
                     <input class='searchbar transparent' id='search' type='search' placeholder='請輸入您想找的活動' />
 
-                    <div class='searchbutton transparent' id='searchbutton' type="submit" value='找活動'
+                    <!-- <div class='searchbutton transparent' id='searchbutton' type="submit" value='找活動'
                         style="text-align: center; display: flex;justify-content: center; flex-direction: column; padding-top: 13px; float: right;">
                         <p>找活動</p>
-                    </div>
-
+                    </div> -->
                 </form>
+                <button class='searchbutton transparent' id='searchbutton' style="float: right;">
+                    找活動
+                </button>
+
+
             </search>
 
         </div>
