--- a/public/gathering.html
+++ b/public/gathering.html
@@ -208,7 +208,7 @@
 
                         <div class="rating-box" style="position:relative; width: 100%;">
                             <h5 class="rating-boxH1" style="text-align: center;">我要給評分和評論</h5>
-                            <div class="rating" style="text-align: center;">
+                            <div class="rating" style="text-align: center; cursor: pointer;">
                                 <span class="fa fa-star-o" style="font-size:36px; color: gold;" data-bs-toggle="modal"
                                     data-bs-target="#commentModal" data-bs-rating="1"></span>
                                 <span class="fa fa-star-o" style="font-size:36px; color: gold;" data-bs-toggle="modal"
