--- a/public/profile.html
+++ b/public/profile.html
@@ -32,37 +32,37 @@
 <body>
 
 
-    <div class='wrap'>
 
 
 
-        <!-- ---------------------- header --------------------------- -->
-        <!-- #e3f2fd; -->
-        <div id="header" style="position: absolute;">
-            <nav class="navbar navbar-light fixed-top navbar-expand-lg"
-                style="background-color: rgba(255, 255, 255); padding:0%; padding-top: 5px">
-                <div class="container-md" style="width: 90%; max-width: 90%; height:60px">
 
-                    <a class="navbar-brand logo name" href="./index.html">
-                        <img src="./assets/new_logo2.png" alt="" height="35">
-                    </a>
-                    <div id="main-header">
-                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav" style="align-items: center;">
+    <!-- ---------------------- header --------------------------- -->
+    <!-- #e3f2fd; -->
+    <div id="header" style="position: absolute;">
+        <nav class="navbar navbar-light fixed-top navbar-expand-lg"
+            style="background-color: rgba(255, 255, 255); padding:0%; padding-top: 5px">
+            <div class="container-md" style="width: 90%; max-width: 90%; height:60px">
+
+                <a class="navbar-brand logo name" href="./index.html">
+                    <img src="./assets/new_logo2.png" alt="" height="35">
+                </a>
+                <div id="main-header">
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav" style="align-items: center;">
 
 
-                                <li class="nav-item" style="margin: 0 0 0 0;" data-bs-toggle="offcanvas"
-                                    data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
-                                    <a class="nav-link" href="#" style="display: flex;">
-                                        <!-- <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
+                            <li class="nav-item" style="margin: 0 0 0 0;" data-bs-toggle="offcanvas"
+                                data-bs-target="#offcanvasWithBackdrop" aria-controls="offcanvasWithBackdrop">
+                                <a class="nav-link" href="#" style="display: flex;">
+                                    <!-- <img src="./assets/6590582_box_email_mail_mailbox_icon.png"
                                             style="width: 36px;"> -->
 
-                                        <span class="material-icons">
-                                            all_inbox
-                                        </span>
-                                    </a>
-                                </li>
-                                <!-- <li class="nav-item" style="display: flex;">
+                                    <span class="material-icons">
+                                        all_inbox
+                                    </span>
+                                </a>
+                            </li>
+                            <!-- <li class="nav-item" style="display: flex;">
                                     <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
                                             width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
                                             viewBox="0 0 16 16">
@@ -72,46 +72,45 @@
                                                 d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                                         </svg></a>
                                 </li> -->
-                                <li class="nav-item dropdown" style="margin: 0 0 0 0;">
-                                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false" style="display: flex;">
+                            <li class="nav-item dropdown" style="margin: 0 0 0 0;">
+                                <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false" style="display: flex;">
 
-                                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
                                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                                             <path fill-rule="evenodd"
                                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                                         </svg> -->
-                                        <!-- <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
+                                    <!-- <img src="./assets/3018530_buyer_customer_figure_person_portrait_icon.png"
                                             style="width: 36px;"> -->
-                                        <span class="material-icons">
-                                            account_circle
-                                        </span>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-menu-lg-end"
-                                        aria-labelledby="navbarDropdownMenuLink">
-                                        <li><a class="dropdown-item dropdown-sign" href="/sign.html"
-                                                style="display: block;">登入</a>
-                                        </li>
-                                        <li><a class="dropdown-item dropdown-signed" href="/profile.html"
-                                                style="display: none;">會員資料</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider dropdown-signed" style="display: none;">
-                                        </li>
-                                        <li id=signout><a class="dropdown-item dropdown-signed" href="#"
-                                                style="display: none;">登出</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
+                                    <span class="material-icons">
+                                        account_circle
+                                    </span>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdownMenuLink">
+                                    <li><a class="dropdown-item dropdown-sign" href="/sign.html"
+                                            style="display: block;">登入</a>
+                                    </li>
+                                    <li><a class="dropdown-item dropdown-signed" href="/profile.html"
+                                            style="display: none;">會員資料</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider dropdown-signed" style="display: none;">
+                                    </li>
+                                    <li id=signout><a class="dropdown-item dropdown-signed" href="#"
+                                            style="display: none;">登出</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </nav>
-        </div>
-        <!-- -------------------------------------------------- -->
+            </div>
+        </nav>
+    </div>
+    <!-- -------------------------------------------------- -->
 
 
-
+    <div class='wrap'>
 
         <div id="left">
 
@@ -518,7 +517,8 @@
             profileList.style = "width:60%;"
             console.log('profileData.data.picture', profileData.data.picture)
 
-
+            let profilePicContainer = document.createElement('div')
+            profilePicContainer.style = "display:flex; justify-content:center;"
 
             let profilePic = document.createElement('img')
             profilePic.src = profileData.data.picture || '';
@@ -526,8 +526,8 @@
 
             // profilePic.style = "height:30vh;object-fit: contain;background-image:url('https://mir-s3-cdn-cf.behance.net/project_modules/disp/a5f35a112938979.601ee0c09cecd.gif')"
 
-            profilePic.style = "width:30vh; object-fit: contain; border-radius: 50%; border: 1px solid rgba(255,0,0,1.00);"
-
+            profilePic.style = "width:25vh; object-fit: contain; border-radius: 50%; border: 1px solid rgba(255,56,92,1.00);"
+            profilePicContainer.appendChild(profilePic)
 
 
             let cardBody = document.createElement('div')
@@ -623,7 +623,7 @@
 
 
 
-            profileList.insertBefore(profilePic, profileList.firstChild)
+            profileList.insertBefore(profilePicContainer, profileList.firstChild)
 
 
 
@@ -986,7 +986,11 @@
                 eventBlockRowCardStatusSmallforHost.setAttribute('class', 'text-muted')
 
 
-                eventBlockRowCardStatusSmallforHost.appendChild(document.createTextNode(`狀態 ${hostList.data[i].status}`))
+
+                let status_object = { '1': '已開團', '2': '招募中', '3': '已額滿', '4': '已結束', }
+
+
+                eventBlockRowCardStatusSmallforHost.appendChild(document.createTextNode(`狀態 ${status_object[hostList.data[i].status]}`))
                 eventBlockRowCardStatusforHost.appendChild(eventBlockRowCardStatusSmallforHost)
 
 
