modified index.html and gathering.html

--- a/public/gathering.html
+++ b/public/gathering.html
@@ -350,7 +350,7 @@
 
                 <ul id="messages"></ul>
                 <div>
-                    <form id="messagesForm" action="" style="border-radius:20px;">
+                    <form id="messagesForm" action="">
                         <input id="messageInput" autocomplete="off" /> <button
                             class="btn-send btn-secondary rounded-pill" id="submit-msg">Send</button>
                     </form>
