--- a/public/sign.html
+++ b/public/sign.html
@@ -127,7 +127,8 @@
 
 
 
-            <img src="./assets/Lovepik_com-401270641-cartoon-cute-character-minimalist-party.png" id="main-img">
+            <img src="https://my-personal-project-bucket.s3.ap-northeast-1.amazonaws.com/img/Lovepik_com-401270641-cartoon-cute-character-minimalist-party.png"
+                id="main-img">
             <br>
             <h6>讓您隨時隨地認識新朋友</h6>
 
