--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+
+    <link href="./assets/favicon.ico" rel="shortcut icon" type="image/ico">
 </head>
 
 <body>
