--- a/public/sign.html
+++ b/public/sign.html
@@ -26,7 +26,7 @@
 
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <link href="./assets/favicon.ico" rel="shortcut icon" type="image/ico">
 
 </head>
 
