--- a/public/gathering.html
+++ b/public/gathering.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Project</title>
+    <title>toGather</title>
 
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
 
