--- a/public/profile.html
+++ b/public/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>toGather</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/header_footer.css">
 
